2011-07-21  vadim  <vadim@netcitadel.com>

	* RuleSetModel.cpp (initRule): see #2515 Expanded set of options
	the user can change to pre-set parameters in the new policy rules
	they create. Now user can set default values for action ("Deny" or
	"Accept"), direction, the "stateless" flag and logging.

	* FindObjectWidget.cpp (matchAttr): see #2516 "Enhance Find to
	include searching for IP addresses in ranges". Function "find"
	now finds ip addresses inside address ranges.

2011-07-20  vadim  <vadim@netcitadel.com>

	* FWBTree.cpp (init_statics): see #2619 "Attempting to
	copy-and-paste a tag service results in an error". Pasting of a
	TagService object to the "Tag Services" group did not work.

	* RuleSetView.cpp (itemDoubleClicked): fixes #2566, #2618 Fix for
	the regression introduced when I worked on #2566 "Double-clicking
	on rule when program first starts results in empty editor pane".
	Double click on the rule number should not do anything, but double
	click on rule options, comment and other fields should open the
	editor. Change done for #2566 broke this.

2011-07-20  Vadim Kurland  <vadim@netcitadel.com>

	* ObjectMatcher.cpp (dispatch): removed optimization in
	dispatch(IPv4*,void*) and dispatch(IPv6*, void*) that assumed
	address matches a host or a firewall if it is located somewhere in
	the subtree rooted at the firewall object. This assumption fails
	if the address is a child of a Variable that belongs to the
	Variables folder of this firewall. Instead, always calling
	checkComplexMatchForSingleAddress() which uses
	Interface::findAllInterfaces() and therefore only matches against
	addresses that belong to the interfaces. See #2598

	* PolicyCompiler_ipt.cpp (processSingleObjectNegationInRE):
	consolidated rule processors that deal with single object negation
	into one class. Also, taking into account Variables.

	* Interface.cpp (findAllInterfaces): added more efficient way to
	get a list of all interfaces of a firewall. This function assumes